tests/exact/exact.exp
Error --------------------------------------------------- error_continues.js:3:3

Cannot cast `any` to object type because:
 - inexact object type [1] is incompatible with exact object type [2].
 - in property `p`, number [3] is incompatible with string [4].


Error ---------------------------------------------------- exact_basics.js:49:20

Cannot call `takesExactlyPerson` with `subtypeOfPerson` bound to `person`
because property `first` is missing in `ExactPerson` [1] but exists in object
literal [2].


Error ---------------------------------------------------- exact_basics.js:61:20

Cannot call `takesExactlyPerson` with `returnsSubtypeOfPerson()` bound to
`person` because inexact `Person` [1] is incompatible with exact
`ExactPerson` [2].


Error ---------------------------------------------------- exact_basics.js:71:20

Cannot call `takesExactlyPerson` with `returnsExactlyPerson2()` bound to
`person` because property `first` is missing in `ExactPerson` [1] but exists in
`ExactPerson2` [2].


Error ---------------------------------------------------- exact_basics.js:85:23

Cannot call `takesSubtypeOfPerson2` with `returnsExactlyPerson()` bound to
`person2` because property `first` is missing in `ExactPerson` [1] but exists in
`Person2` [2].


Error ---------------------------------------------------- exact_basics.js:94:17

Cannot create exact type from `PersonPred` [1].


Error ------------------------------------------------------- prop_test.js:28:13

Cannot get `pc.state` because property `state` is missing in `Person` [1].


Error: unsealed.js:14
 14: f(o); // error: o incompatible with exact type
       ^ object literal. This type is incompatible with the expected param type of
  4: function f(o: {p: string} | $Exact<{}>): string {
                   ^^^^^^^^^^^^^^^^^^^^^^^^ union: object type(s)
  Member 1:
    4: function f(o: {p: string} | $Exact<{}>): string {
                     ^^^^^^^^^^^ object type
  Error:
   14: f(o); // error: o incompatible with exact type
         ^ object literal. This type is incompatible with
    4: function f(o: {p: string} | $Exact<{}>): string {
                     ^^^^^^^^^^^ object type
    Property `p` is incompatible:
        4: function f(o: {p: string} | $Exact<{}>): string {
                         ^^^^^^^^^^^ property `p`. Property not found in
       14: f(o); // error: o incompatible with exact type
             ^ object literal
  Member 2:
    4: function f(o: {p: string} | $Exact<{}>): string {
                                   ^^^^^^^^^^ object type
  Error:
   14: f(o); // error: o incompatible with exact type
         ^ object literal. Inexact type is incompatible with exact type
    4: function f(o: {p: string} | $Exact<{}>): string {
                                   ^^^^^^^^^^ object type

Error ------------------------------------------------------- unsealed2.js:15:12

Cannot return `x.q` because string [1] is incompatible with number [2].


Error ---------------------------------------------------------- use_ops.js:2:31

Cannot assign `a` to `b` because in property `p`, inexact object type [1] is
incompatible with exact object type [2].


Error ----------------------------------------------------------- use_ops.js:6:3

Cannot call `f` with `o` bound to `o` because inexact object type [1] is
incompatible with exact object type [2].



Found 12 errors
